feat: added billing service and handler, moved getplans to public
